...
                  }}
                  inputStyle={{ color: colors.inkPrimary }}
                  onBlur={onBlur}
                  onChangeText={onChange}
                  placeholder={t("groups.create.name.placeholder")}
                  placeholderTextColor={colors.inkMuted}
                  testID="group-name-input"
                  value={value}
                />
              </View>
            )}
          />

...
